# expo-uniffi-sample-app

./: app.json  package.json  pnpm-lock.yaml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dariovp/expouniffisampleapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
example_rust_lib/: .gitignore  Cargo.toml  build.rs  uniffi-bindgen.rs
example_rust_lib/src/: example_lib.udl  lib.rs
